--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Sep 14 15:49:37 ICT 2019
-sdk.dir=F\:\\sdk
+#Sun Sep 22 10:59:16 ICT 2019
+sdk.dir=D\:\\AppData\\Local\\sdk
